maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: ':' expected but ',' found.
def testV(x,y):Boolean = (return (x < getMondeLargeur() -1 && y < getMondeHauteur() -1)
           ^JediEscaper:38: error: identifier expected but '}' found.
}
^